fiz algumas aulas, e adicionei conteudo no html e jsp

--- a/nojo´s/pom.xml
+++ b/nojo´s/pom.xml
@@ -1,16 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
-  <groupId>br.com.carstore</groupId>
-  <artifactId>carstore</artifactId>
+  <groupId>br.com.nojos</groupId>
+  <artifactId>nojos</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>carstore Maven Webapp</name>
+  <name>Nojos Maven Webapp</name>
   <url>http://maven.apache.org</url>
 
   <dependencies>
-
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -36,11 +35,10 @@
       <artifactId>h2</artifactId>
       <version>2.1.214</version>
     </dependency>
-
   </dependencies>
 
   <build>
-    <finalName>carstore</finalName>
+    <finalName>nojos</finalName>
     <plugins>
       <plugin>
         <groupId>org.apache.tomcat.maven</groupId>
@@ -53,7 +51,7 @@
           <execution>
             <id>tomcat-run</id>
             <goals>
-              <goal>exec-war</goal>
+              <goal>run</goal>
             </goals>
             <phase>package</phase>
             <configuration>
@@ -67,11 +65,10 @@
         <artifactId>maven-war-plugin</artifactId>
         <version>3.2.2</version>
         <configuration>
-          <webXml>src\main\webapp\WEB-INF\web.xml</webXml>
+          <webXml>src/main/webapp/WEB-INF/web.xml</webXml>
           <warSourceDirectory>src/main/webapp</warSourceDirectory>
         </configuration>
       </plugin>
-
     </plugins>
   </build>
 
